packages/typ/tests/fixtures/diagnostics/0932_gadt_constructor_payload_bool_mismatch_08.ml.expected
File "0932_gadt_constructor_payload_bool_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0932_gadt_constructor_payload_bool_mismatch_08 is not a valid module name.

File "0932_gadt_constructor_payload_bool_mismatch_08.ml", line 5, characters 38-39:
5 | let _ : bool expr_theta = EBool_theta 7
                                          ^
Error: The constant 7 has type int but an expression was expected of type
         bool
